--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "less": "^4.1.1",
     "less-loader": "^8.1.1",
     "mini-css-extract-plugin": "^1.6.0",
+    "range-slider-input": "^2.4.4",
     "style-loader": "^2.0.0",
     "tippy.js": "^6.3.7",
     "webpack": "^5",
