--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "handlebars-loader": "^1.7.1",
     "html-webpack-plugin": "^5.3.1",
     "jquery": "^3.3.1",
+    "js-confetti": "^0.11.0",
     "less": "^4.1.1",
     "less-loader": "^8.1.1",
     "mini-css-extract-plugin": "^1.6.0",
